overflow issue changes

--- a/style.css
+++ b/style.css
@@ -145,7 +145,7 @@ nav .main-menu a:hover {
 }
 .hero-left .top h1 {
   color: #000;
-
+overflow: hidden;
   font-family: Clash Display;
   font-size: 64px;
   font-style: normal;
@@ -393,7 +393,7 @@ nav .main-menu a:hover {
   color: #000;
 
   text-align: center;
-
+overflow: hidden;
   font-size: 48px;
   font-style: normal;
   font-weight: 600;
@@ -403,7 +403,7 @@ nav .main-menu a:hover {
 }
 .testimonial-down h3 {
   color: #000;
-
+overflow: hidden;
   font-family: Clash Display;
   font-size: 28px;
   font-style: normal;
@@ -501,6 +501,7 @@ transform: scale(.9);
   font-weight: 600;
   line-height: 28px;
   text-transform: capitalize;
+  overflow: hidden;
 }
 .c h3 {
   color: #fff;
@@ -542,6 +543,7 @@ transform: scale(.9);
   font-weight: 700;
   line-height: 48px;
   text-transform: capitalize;
+  overflow: hidden;
 }
 
 .download-app p {
@@ -587,7 +589,7 @@ transform: scale(.9);
 .col-2{
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 30px;
 }
 .col-2 .logo{
   display: flex;
@@ -599,9 +601,10 @@ transform: scale(.9);
   text-align: start;
   font-size: 32px;
   font-style: normal;
-  font-weight: 500;
+  font-weight: 600;
   line-height: 42px; 
-  text-transform: capitalize;
+ text-transform: capitalize;
+ background-color: red;
 }
 .col-2 h5{
   color: #000;
@@ -621,6 +624,7 @@ transform: scale(.9);
 }
 .footer h5{
   transition: all .5s ease-in-out;
+  text-transform: capitalize;
 }
 .footer h5:hover{
 transform: scale(1.1);
@@ -631,7 +635,9 @@ color: #f55;
   *{
 overflow-x: hidden;
   }
- 
+  .testimonial-down{
+    max-width: 90vw;
+  }
   .download{
    width: 95vw;
     margin: auto;
